# CLIuno-Django-template

./: .dockerignore  .env.example  .env.production  .gitignore  API rule.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: settings.py
main/: settings.py  urls.py
src/: __init__.py  admin.py  models.py  permissions.py
src/helpers/: email.py
src/serializers/: follow_serializers.py  post_serializers.py  role_serializers.py  todo_serializers.py  user_serializers.py
src/tests/: base.py  test_auth.py  test_follows.py  test_posts.py  test_roles.py  test_todos.py  test_users.py
src/urls/: __init__.py  auth_urls.py  dispatch.py  follow_urls.py  post_urls.py  role_urls.py  todo_urls.py  user_urls.py
src/views/: auth_views.py  follow_views.py  post_views.py  role_views.py  todo_views.py  user_views.py
